--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="header">
-    <h2>Libreta de Notas</h2>
+    <h2>* Libreta de Notas *</h2>
   </div>
 
   <div class="note-editor" id="note-editor">
